# CppPractice

./: .gitignore
src/QtAdvance02_QTcpServer/: CMakeLists.txt  ConsoleApp.pro
src/QtAdvance02_QTcpServerMultiThread/: CMakeLists.txt  ConsoleApp.pro
src/QtAdvance02_QTcpSocket/: CMakeLists.txt  ConsoleApp.pro
src/QtAdvance_Thread/: CMakeLists.txt  ConsoleApp.pro  ConsoleApp.pro.user.30d696e  main.cpp  worker.cpp  worker.h
src/QtAdvanced/: TennisTests.h  tennis.cpp
src/QtConsoleAppTemplate/: CMakeLists.txt
src/QtConsoleAppTemplate - Copy/: main.cpp
src/QtConsoleApp_boolinq/: ConsoleApp.pro  main.cpp
src/QtCoreBeginner/: CMakeLists.txt  QtCoreBeginner.pro  animal.cpp  animal.h  freezer.h  main.cpp  microwave.h  radio.cpp  radio.h  station.h
src/QtCoreBeginner11_SignalsAndSlots/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp  source.h  station.cpp
src/QtCoreBeginner13_ErrorHandling/: main.cpp
src/QtCoreBeginner14_TemplatesAndGenerics/: ConsoleApp.pro  main.cpp  test.h
src/QtCoreBeginner15_BasicQtClasses/: CMakeLists.txt  ConsoleApp.pro  main.cpp
src/QtCppCodingConventions/: ConsoleApp.pro  democar.cpp  democar.h  myclass.h
src/QtCppCodingConventions/interfaces/: icar.h
src/QtDesignPatterns07_TemplatePatterns/cats/: catfactory.h
src/QtDesignPatterns08_AbstractFactory/: CMakeLists.txt  ConsoleApp.pro  main.cpp
src/QtDesignPatterns08_FactoryMethod/: CMakeLists.txt  ConsoleApp.pro  longdelay.cpp  longdelay.h  main.cpp
src/QtDesignPatterns08_ObjectPool/: ConsoleApp.pro  main.cpp  mypoolitem.cpp  mypoolitem.h
src/QtDesignPatterns08_Singleton_MagicStatic/: CMakeLists.txt  ConsoleApp.pro  main.cpp  myclass.cpp  myclass.h  singleton.h
src/QtDesignPatterns09_Adapter/: CMakeLists.txt  ConsoleApp.pro  logadapter.cpp  logadapter.h  main.cpp
src/QtDesignPatterns09_Bridge/: CMakeLists.txt  ConsoleApp.pro  main.cpp
src/QtDesignPatterns09_Composite/: CMakeLists.txt  ConsoleApp.pro  main.cpp
src/QtDesignPatterns09_Decorator/: CMakeLists.txt  ConsoleApp.pro  main.cpp
src/QtDesignPatterns10_FactoryMethod/: shortdelay.cpp  shortdelay.h
src/QtDesignPatterns11_ObjectPool/: CMakeLists.txt  mypool.cpp  mypool.h
src/QtHelloworld/: CMakeLists.txt  QMake_Build_Debug.bat  helloworld.pro  main.cpp
src/QtIntermediate01_MemoryManagement/: CMakeLists.txt  ConsoleApp.pro  consumer.cpp  consumer.h  main.cpp  test.cpp  test.h
src/QtIntermediate02_Collections/: ConsoleApp.pro  main.cpp
src/QtIntermediate03_WorkingWithSettings/: main.cpp
src/QtIntermediate04_WorkingWithFileSystem/: main.cpp
src/QtIntermediate05_ExploringQDebug/: CMakeLists.txt  ConsoleApp.pro  logger.cpp  logger.h  main.cpp
src/QtIntermediate11_Timers/: CMakeLists.txt  ConsoleApp.pro  main.cpp  test.cpp  test.h
src/QtTennisKata/: CMakeLists.txt  ConsoleApp.pro  TennisTests.cpp  TennisTests.h  main.cpp
src/QtTennisKata_GoogleTest/: CMakeLists.txt  QtTennisKata_GoogleTest.pro  gtest_dependency.pri  main.cpp  tst_tennistestcase.h
src/QtTennisKata_QtTest/: CMakeLists.txt  main.cpp  tennis.cpp  tennis.h
src/libdll/: CMakeLists.txt  QMake_Bulid_Debug.bat  QMake_Clean.bat  bulid_QMake_Debug.bat  libdll.pro  xglobal.h  xsocket.cpp  xsocket.h
(+13 files in other folders)
